--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,27 @@
 /* section 1 style */
-html {
+
+
+/* smooth scroll*/
+/* .hero {
+
+    overflow-y: scroll;
     scroll-behavior: smooth;
-   }
+}
 
 
+body {
+
+    overflow-y: hidden;
+
+} */
+
+html {
+    overflow: smooth;
+}
+
+
+
+   
 .mainTitle {
     color: white;
     font-stretch: expanded;
